<?xml version="1.0"?>
<package format="3">
  <name>marvin_driver</name>
  <version>0.1.0</version>
  <description>ROS 2 driver for the Tianji Marvin dual-arm controller.</description>
  <maintainer email="todo@example.com">ccs</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_srvs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
